商店列表、消息列表、聊天页面、个人中心

--- a/src/uni.scss
+++ b/src/uni.scss
@@ -78,8 +78,8 @@ $uni-font-size-paragraph:30rpx;
 
 
 //自定义
-$theme_color:#5d8dfd;
-$theme_color2:#9E50F2;
+$theme_color:#08A1DB;
+$theme_color2:#25D9B6;
 $theme_color_im: #dd524d;
 
 $theme_bg_text_color:#fff;
