商家页，聊天语音滑动修复

--- a/src/uni.scss
+++ b/src/uni.scss
@@ -83,7 +83,7 @@ $theme_color2:#25D9B6;
 $theme_color_im: #dd524d;
 
 $theme_bg_text_color:#fff;
-$theme_bg:#FCFCFC;
+$theme_bg:rgb(249, 247, 247);// FCFCFC
 
 $space:30rpx;
 $space_padding:20rpx;
